Dst Mapping dialog implemented ; fixes #26

--- a/DEHPMatlab/Views/DstVariablesControl.xaml
+++ b/DEHPMatlab/Views/DstVariablesControl.xaml
@@ -5,10 +5,18 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid"
              xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
+             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
+             xmlns:behaviors="clr-namespace:DEHPCommon.UserInterfaces.Behaviors;assembly=DEHPCommon"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" >
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/DEHPCommon;component/UserInterfaces/Views/ContextMenu/ContextMenuStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <dx:LoadingDecorator BorderEffect="Default" BorderEffectColor="Blue" IsSplashScreenShown="{Binding IsBusy}" OwnerLock="LoadingContent">
-
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -45,7 +53,14 @@
                 </dxg:TreeListControl.Columns>
             </dxg:TreeListControl>
             <TextBlock Grid.Row="2" FontSize="12" FontWeight="Black" Text="Workspace" Margin="4"/>
-            <dxg:TreeListControl Grid.Row="3" ItemsSource="{Binding WorkspaceVariables}">
+            <dxg:TreeListControl Grid.Row="3" 
+                                 ItemsSource="{Binding WorkspaceVariables}"
+                                 SelectedItem="{Binding SelectedThing}"
+                                 SelectedItems="{Binding SelectedThings}"
+                                 SelectionMode="MultipleRow">
+                <dxmvvm:Interaction.Behaviors>
+                    <behaviors:ContextMenuBehavior/>
+                </dxmvvm:Interaction.Behaviors>
                 <dxg:TreeListControl.View>
                     <dxg:TreeListView Name="WorkspaceVariables"
                                       AllowEditing="False"
@@ -66,6 +81,9 @@
                                       KeyFieldName="Name"
                                       ParentFieldName="ParentName"
                                       ToolTip="All variables inside the Matlab Workspace">
+                        <dxg:TreeListView.ContextMenu>
+                            <ContextMenu Name="RowContextMenu" />
+                        </dxg:TreeListView.ContextMenu>
                     </dxg:TreeListView>
                 </dxg:TreeListControl.View>
                 <dxg:TreeListControl.Columns>
