--- a/DEHPMatlab/Views/Dialogs/HubMappingConfigurationDialog.xaml
+++ b/DEHPMatlab/Views/Dialogs/HubMappingConfigurationDialog.xaml
@@ -13,7 +13,7 @@
                    xmlns:viewModels="clr-namespace:DEHPCommon.UserInterfaces.ViewModels.Rows.ElementDefinitionTreeRows;assembly=DEHPCommon"
                    xmlns:converters="clr-namespace:DEHPCommon.Converters;assembly=DEHPCommon"
                    Title="HubMappingConfigurationDialog"
-                   WindowStartupLocation="CenterScreen"
+                   WindowStartupLocation="CenterScreen" Topmost="True"
                    mc:Ignorable="d" MinHeight="450" MinWidth="800">
     <Window.Resources>
         <ResourceDictionary>
@@ -188,7 +188,7 @@
                                     </dxg:TreeListControl.View>
                                     <dxg:TreeListControl.Columns>
                                         <dxg:TreeListColumn AllowEditing="False" FieldName="Name" Fixed="Left" />
-                                        <dxg:TreeListColumn AllowEditing="False" FieldName="SelectedValue" />
+                                        <dxg:TreeListColumn AllowEditing="False" FieldName="Value" />
                                     </dxg:TreeListControl.Columns>
                                 </dxg:TreeListControl>
                             </dxdo:LayoutPanel>
