--- a/DEHPMatlab/Views/Dialogs/HubMappingConfigurationDialog.xaml
+++ b/DEHPMatlab/Views/Dialogs/HubMappingConfigurationDialog.xaml
@@ -188,7 +188,8 @@
                                     </dxg:TreeListControl.View>
                                     <dxg:TreeListControl.Columns>
                                         <dxg:TreeListColumn AllowEditing="False" FieldName="Name" Fixed="Left" />
-                                        <dxg:TreeListColumn AllowEditing="False" FieldName="Value" />
+                                        <dxg:TreeListColumn AllowEditing="False" FieldName="ActualValue" />
+                                        <dxg:TreeListColumn AllowEditing="False" FieldName="InitialValue" />
                                     </dxg:TreeListControl.Columns>
                                 </dxg:TreeListControl>
                             </dxdo:LayoutPanel>
@@ -250,7 +251,7 @@
                                                     <TextBlock Height="Auto" Margin="3" FontSize="10" FontWeight="Normal" Text="Name: " />
                                                     <TextBlock Grid.Row="0" Grid.Column="1" Height="Auto" Margin="3" FontSize="10" Text="{Binding SelectedMatlabVariable.Name}" TextTrimming="CharacterEllipsis" />
                                                     <TextBlock Grid.Column="0" Grid.Row="1"  Height="Auto" Margin="3" FontSize="10" FontWeight="Bold" Text="Value to replace: " />
-                                                    <TextBlock Grid.Row="1" Grid.Column="1" Height="Auto" Margin="3" FontSize="10" Text="{Binding SelectedMatlabVariable.Value}" TextTrimming="CharacterEllipsis" />
+                                                    <TextBlock Grid.Row="1" Grid.Column="1" Height="Auto" Margin="3" FontSize="10" Text="{Binding SelectedMatlabVariable.ActualValue}" TextTrimming="CharacterEllipsis" />
                                                 </Grid>
                                                 <Button ToolTip="Delete this mapping row" Command="{Binding ElementName=Mapping, Path=DataContext.DeleteMappedRowCommand}" CommandParameter="{Binding SelectedParameter.Iid}" 
                                                         HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="3" Height="30" Width="30">
