--- a/DEHPMatlab/Views/MainWindow.xaml
+++ b/DEHPMatlab/Views/MainWindow.xaml
@@ -78,6 +78,15 @@
                                     <Button ToolTip="Change Transfer Direction" Grid.Column="1" Height="40" HorizontalAlignment="Center" Content="Change Transfer Direction" Command="{Binding ChangeMappingDirection}"/>
                                     <Path Grid.Column="2" Stretch="Fill" Fill="DarkGray" Data="M 0,110 110,110 110,90 120,120 110,150 110,130 0,130 Z" HorizontalAlignment="Left" Margin="10,5,-10,5" MaxHeight="30" RenderTransformOrigin=".5,.5"/>
                                 </Grid>
+                                <dx:DXTabControl Name="HubEngineeringModelPreview" Grid.Row="1" 
+                                                 SelectedIndex="{Binding CurrentMappingDirection}">
+                                    <dx:DXTabItem Header="Hub Engineering Model">
+                                        <objectBrowser:ObjectBrowser DataContext="{Binding HubNetChangePreviewViewModel}" />
+                                    </dx:DXTabItem>
+                                    <dx:DXTabItem Header="Matlab Variables">
+                                        <views:DstNetChangePreview DataContext="{Binding DstNetChangePreviewViewModel}" />
+                                    </dx:DXTabItem>
+                                </dx:DXTabControl>
                             </Grid>
                         </dxdo:LayoutPanel>
                         <dxdo:LayoutPanel Name="HubPanel" Caption="Hub Data Source">
