--- a/DEHPMatlab/Views/Dialogs/DstConnect.xaml
+++ b/DEHPMatlab/Views/Dialogs/DstConnect.xaml
@@ -62,6 +62,13 @@
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
+                        <dxe:ComboBoxEdit Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Name="ModelBoxEdit"  
+                                          DisplayMember="ExternalModelName" ShowNullTextForEmptyValue="True"
+                                          Height="25" Margin="5" FontSize="12" SelectedItem="{Binding SelectedExternalIdentifierMap}"
+                                          ItemsSource="{Binding AvailableExternalIdentifierMap}" IncrementalFiltering="True" 
+                                          NullValueButtonPlacement="EditBox" NullText="No Mapping Configuration Selected"
+                                          ToolTip="Select an existing mapping"/>
+
                         <CheckBox Grid.Column="0" Grid.Row="1" Height="25" Content="New Configuration" IsChecked="{Binding CreateNewMappingConfigurationChecked}" />
                         
                         <dxe:TextEdit Grid.Column="1" Grid.Row="1" Height="25" Margin="5" FontSize="12"
